# Translator

./: README.md  pyproject.toml
app/: app.py
app/services/: translator.py
tests/: test_translator_discord_bot.py
